# SCRAPY_PROJECT

./: README.md  mermaid_test.md  pyproject.toml
filmscraper/: data.csv  data_film.csv  data_filmv2.csv  data_serie.csv  data_seriev2.csv  data_testclean.csv  data_testclean2.csv
filmscraper/filmscraper/: database.py  items.py  pipelines.py  settings.py
filmscraper/filmscraper/spiders/: allocine_serie_spider.py  allocinespider.py  filmspider.py
