[tool.poetry]
name = "scrapy-project"
version = "0.1.0"
description = ""
authors = ["Serge Buasa <sergebuasa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
scrapy = "^2.11.2"
sqlalchemy = "^2.0.31"
mysql-connector-python = "^8.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
